# OpenMPRDB-cli

./: .gitignore  CMakeLists.txt  README.md
etc/: mprdbc.conf.in
src/: CMakeLists.txt  Config.cpp  Config.h  DataBase.cpp  DataBase.h  GPGTool.cpp  GPGTool.h  HttpConnection.cpp  HttpConnection.h  MPRDBC.cpp  MPRDBC.h  main.cpp  shell.h  shell.hpp  value.cpp  value.h
test/: CMakeLists.txt  testShell.cpp  testValue.cpp
